--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,15 @@
 {
     "require": {
         "phpmailer/phpmailer": "^6.9",
-        "flutterwavedev/flutterwave-v3": "^1.0"
+        "flutterwavedev/flutterwave-v3": "^1.0",
+        "yabacon/paystack-php": "^2.2"
+    },
+    "autoload": {
+        "psr-4": {
+            "App\\": "src/"
+        },
+        "classmap": [
+            "vendor/flutterwavedev/flutterwave-v3/src/HttpAdapter"
+        ]
     }
 }
