--- a/.env
+++ b/.env
@@ -1,4 +1,24 @@
 # ... other variables ...
+APP_ENV=local # Change to 'production' on your live server
+APP_DEBUG=true # Set to false in production
+APP_URL=http://localhost/goodguy # Your base URL
+
+# -- Database Configuration (Used by includes.php/conn.php) --
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=goodguy # Replace with your actual database name
+DB_USERNAME=root # Replace with your actual DB username
+DB_PASSWORD= # Replace with your actual DB password (leave blank if none for local root)
+
+# -- SMTP Mail Configuration (Used by _recovery.php) --
+SMTP_HOST=smtp.hostinger.com
+SMTP_PORT=465
+SMTP_SECURE=smtps # Use 'tls' for port 587, 'ssl' or 'smtps' for 465
+SMTP_USERNAME=care@goodguyng.com
+SMTP_PASSWORD=Password1@ # <-- CHANGE THIS TO YOUR ACTUAL PASSWORD
+SMTP_FROM_EMAIL=care@goodguyng.com
+SMTP_FROM_NAME="Goodguyng.com"
 
 # Paystack Keys (Use Test Keys for development)
 PAYSTACK_SECRET_KEY=sk_test_88a210da5a656b9fb1b72c7204022f69d7e0f8ba
